[tool.poetry]
name = "wake-me-up"
version = "0.1.0"
description = ""
authors = ["Renan Gomes <renan.gomes@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.13.3"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
